test/interaction/Issue731.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "Sort _2 [ at Issue731.agda:5.15-16 ] _3 : _2 [ at Issue731.agda:5.15-16 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: Set₁ = _2 (blocked on _2) _3 =< Set (blocked on _3)" nil)
((last . 1) . (agda2-goals-action '()))
(agda2-status-action "")
(agda2-info-action "*Constraints*" "Set₁ = _2 (blocked on _2, belongs to problem 3) Set₁ = _2 (blocked on _2, belongs to problem 3) Set₁ = _2 (blocked on _2, belongs to problem 3) Set₁ = _2 (blocked on _2, belongs to problem 3) _3 =< Set (blocked on _3, belongs to problem 3) Set₁ = _2 (blocked on _2, belongs to problem 3) Set₁ = _2 (blocked on _2, belongs to problem 3) Set₁ = _2 (blocked on _2, belongs to problem 3) Set₁ = _2 (blocked on _2, belongs to problem 3) Set₁ = _2 (blocked on _2, belongs to problem 3) Set₁ = _2 (blocked on _2, belongs to problem 3) _5 := foo (blocked on problem 3)" nil)
